<resources>
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <string name="back4app_app_id">YF5Mrm4vLE5Npe7GaTuhzWDIilgtx15L4qaQoiUy</string>
    <string name="back4app_client_key">jDXr9DSbQYF0IXJrtT0UTHhq8NmcIZ5kI7tohnrH</string>

    <string name="app_name">Волонтёрская книга</string>

    <string name="enter">Вход</string>
    <string name="sign_in_to_get_started">Введите адрес электронной почты и пароль, чтобы войти в систему</string>
    <string name="sign_up_to_get_started">У вас еще нет аккаунта? Зарегестрируйтесь</string>
    <string name="sign_in">Войти</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="sign_up_window">Регистрация</string>
    <string name="lastname">Фамилия</string>
    <string name="firstname">Имя</string>
    <string name="patronymic">Отчество</string>
    <string name="date_of_birthday">Дата роджения</string>
    <string name="phone_number">Номер телефона</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>

    <string name="filter_of_events">Фильтр мероприятий</string>
    <string name="fio">Ivanov Ivan\n</string>
    <string name="age_city">25 лет, Москва\n</string>
    <string name="rate">Оценить</string>


    <string name="venue">Место проведения</string>

    <string name="organizer">Организатор</string>

    <string name="datetime">Дата и время</string>

    <string name="quantity">Количество участников</string>
    <string name="mero">Мероприятия</string>
    <string name="enter_title_of_event">Введите название мероприятия</string>
    <string name="title">Название</string>
    <string name="enter_description_of_event">Введите описания мероприятия</string>
    <string name="description">Описание</string>
    <string name="enter_date_of_event">Введите дату мероприятия</string>
    <string name="date">Дата</string>
    <string name="enter_time_of_event">Выберите время мероприятия</string>
    <string name="enter_quantity_of_participants">Введите количество участников</string>
    <string name="enter_venue_of_event">Введите место проведения мероприятия</string>
    <string name="age">Возраст</string>
    <string name="accept">Принять</string>
    <string name="cancel">Отклонить</string>
    <string name="applications">Заявки</string>
    <string name="reports">Отчёты</string>
    <string name="points">Баллы</string>
    <string name="choose_points">Выберите количество очков</string>


</resources>