<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:mask="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <EditText
            android:id="@+id/lastnameField"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="@string/lastname"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/firstnameField"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:layout_marginTop="12dp"
            android:hint="@string/firstname"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/patronymicField"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:layout_marginTop="12dp"
            android:hint="@string/patronymic"
            android:inputType="textPersonName" />

        <com.vicmikhailau.maskededittext.MaskedEditText
            android:id="@+id/ageField"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:layout_marginTop="12dp"
            android:hint="@string/date_of_birthday"
            android:inputType="date"
            android:minHeight="48dp"
            mask:mask="####-##-##" />

        <com.vicmikhailau.maskededittext.MaskedEditText
            android:id="@+id/phoneField"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:layout_marginTop="12dp"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:minHeight="48dp"
            mask:mask="+7(###) ### ## ##" />


        <EditText
            android:id="@+id/emailField"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:layout_marginTop="12dp"
            android:hint="@string/login"
            android:inputType="textEmailAddress"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/password1Field"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:layout_marginTop="12dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/enterSignUpButton"
            android:layout_marginTop="25dp"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/teal_200"
            android:text="@string/sign_up" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>