<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_element"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SignInActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="85dp"
            android:text="@string/enter"
            android:textSize="36sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/sign_in_to_get_started"
            android:textAlignment="center"
            android:textColor="@color/gray"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/constraintLayout"
        android:layout_marginTop="60dp"
        android:orientation="vertical"
        android:gravity="center">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loginLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:baselineAligned="false"
            android:textColorHint="@android:color/darker_gray"
            app:boxStrokeColor="@color/black"
            android:hint="@string/login">
            <EditText
                android:id="@+id/editTextLogin"
                android:layout_width="280dp"
                android:layout_height="55dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/login"
                android:textColor="@color/black"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:baselineAligned="false"
            android:textColorHint="@android:color/darker_gray"
            app:boxStrokeColor="@color/black"
            app:passwordToggleEnabled="true"
            android:hint="@string/password">
            <EditText
                android:id="@+id/editTextPassword"
                android:layout_marginTop="25dp"
                android:layout_width="280dp"
                android:layout_height="55dp"
                android:ems="10"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:textColor="@color/black"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/signInButton"
            android:layout_marginTop="25dp"
            android:layout_width="220dp"
            android:layout_height="55dp"
            android:backgroundTint="@color/primary"
            android:text="@string/sign_in"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/textView"
            android:layout_marginTop="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="13sp"
            android:textColor="#616161"
            android:text="@string/sign_up_to_get_started" />

        <Button
            android:id="@+id/signUpButton"
            android:textColor="@color/white"
            android:layout_width="220dp"
            android:layout_height="55dp"
            android:backgroundTint="@color/primary"
            android:text="@string/sign_up" />


    </LinearLayout>

</RelativeLayout>