<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="20dp"
    android:backgroundTint="@color/light_primary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/user_name_of_item"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="Горбачев Павел Алексеевич"
            android:textColor="@color/primary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="140dp"
                android:layout_height="140dp"
                app:srcCompat="@drawable/cat" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:gravity="left"
            android:orientation="vertical">




            <TextView
                android:id="@+id/ageTextCustomItem"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age"
                android:textColor="@color/primary" />

            <TextView
                android:id="@+id/ratingTextCustomItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rate"
                android:textColor="@color/primary" />

            <TextView
                android:id="@+id/phoneTextCustomItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:textColor="@color/primary" />
        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <Button
            android:id="@+id/acceptButton_of_item"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@drawable/round_corner"
            android:text="@string/accept"
            android:textColor="@color/white"/>
        <Button
            android:id="@+id/cancelButton_of_item"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/round_corner"
            android:text="@string/cancel"
            android:textColor="@color/white"/>

    </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>