<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:mask="http://schemas.android.com/tools"
    android:backgroundTint="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/layout_bg"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/textView"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textColor="@color/primary"
            android:text="@string/enter_title_of_event" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/eventTitleLayout"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:textColorHint="@color/gray"
            app:boxStrokeColor="@color/primary"
            android:hint="@string/title">
            <EditText
                android:id="@+id/eventEditTextTitle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView5"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textColor="@color/primary"
            android:text="@string/enter_description_of_event" />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/eventDescriptionLayout"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:textColorHint="@color/gray"
            app:boxStrokeColor="@color/primary"
            android:hint="@string/description">
            <EditText
                android:id="@+id/eventEditTextDescription"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:inputType="textPersonName"/>
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/textView6"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textColor="@color/primary"
            android:text="@string/enter_date_of_event" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/eventDateLayout"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:textColorHint="@color/gray"
            app:boxStrokeColor="@color/primary"
            android:hint="@string/date">
            <com.vicmikhailau.maskededittext.MaskedEditText
                android:id="@+id/eventEditTextDate"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:inputType="date"
                mask:mask="####-##-##"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView11"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textColor="@color/primary"
            android:text="@string/enter_venue_of_event" />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/eventVenueLayout"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:textColorHint="@color/gray"
            app:boxStrokeColor="@color/primary"
            android:hint="@string/venue">
            <EditText
                android:id="@+id/eventEditTextVenue"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:inputType="textPersonName"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="170dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:text="@string/enter_quantity_of_participants"
                android:textColor="@color/primary" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/eventQuantityMaxLayout"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:textColorHint="@color/gray"
                app:boxStrokeColor="@color/primary"
                android:hint="@string/quantity">
                <EditText
                    android:id="@+id/eventEditTextQuantityMax"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:ems="10"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/textView9"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textColor="@color/primary"
            android:text="@string/enter_time_of_event" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView8"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:textSize="14sp"
                android:textAlignment="center"
                android:gravity="center"
                android:textColor="@color/primary"
                android:text="Часы:" />

            <Spinner
                android:id="@+id/spinnerHours"
                android:layout_width="80dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:backgroundTint="@color/primary"
                android:contentDescription="spinner"/>

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:textSize="14sp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:gravity="center"
                android:textColor="@color/primary"
                android:text="Минуты:" />

            <Spinner
                android:id="@+id/spinnerMinutes"
                android:layout_marginEnd="10dp"
                android:layout_width="80dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:backgroundTint="@color/primary"
                android:contentDescription="spinner"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>